# multi-model-implementation-ros2

./: .gitignore  README.md
bcr_bot/launch/: bcr_bot_gazebo_spawn.launch.py  bcr_bot_gz_spawn.launch.py  bcr_bot_ign_spawn.launch.py
bcr_bot/rviz/: map.rviz
bcr_bot/urdf/: bcr_bot.xacro
bcr_bot/worlds/: small_warehouse.sdf
resnet50-yolov8-template/template_recognition/: CMakeLists.txt  package.xml
resnet50-yolov8-template/template_recognition/launch/: launch_yolov8.launch.py
resnet50-yolov8-template/template_recognition/scripts/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
resnet50-yolov8-template/yolov8_template_msgs/msg/: InferenceResult.msg  Yolov8Inference.msg
