<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>template_recognition</name>
  <version>0.0.0</version>
  <description>An easy to use template for adding object detection to your robot IRL and in sim!</description>
  <maintainer email="victorboyd.dev@gmail.com">Victor Boyd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!--added-->


 <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
<!-- Custom messages (if you use a Yolov8Inference.msg) -->
  <exec_depend>template_recognition_interfaces</exec_depend>  <!-- Optional: your msg package -->

  <build_depend>yolov8_template_msgs</build_depend>
  <exec_depend>yolov8_template_msgs</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
